make sure hyperlinks are visible

--- a/assets/styles/partials/_page.scss
+++ b/assets/styles/partials/_page.scss
@@ -55,5 +55,8 @@
 	.weighted {
 		font-weight: 900;
 	}
+	a {
+		color: $color-grey;
+	}
 }
 
